[#160220968] Allow to disable a clock
* Added buttons for resume/pause per clock
* ignore error when resume a clock without a queue

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -30,9 +30,28 @@ nav h4 {
     margin-top: 30px
 }
 
+.table .btn {
+    width: 100%;
+}
+
+.table td {
+    vertical-align: middle;
+}
+
+.clock-row.paused {
+    font-style: italic;
+    color: darkgray;
+}
+
+th.actions {
+    width: 15%;
+}
+
 .noClocksMsg {
     font-style: italic;
     color: #BDBDBD;
     text-align: center;
     margin: 60px;
 }
+
+
